meta tag facebook

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta property="og:url" content="https://www.autodiki.it" />
+  <meta property="og:title" content="AutoDiki.it" />
+  <meta property="og:description" content="Genera la tua autodichiarazione e salvala sul tuo dispositivo." />
   <title>Autodiki</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
